TCKContractNegotiationRequest